# multirobot-collaborative-slam

./: .gitignore  Dockerfile  README.md
dev/multirobot_slam_dev_container/workspace/gtsam_benchmark_project/: CMakeLists.txt  plot.bash  plot_isam_stats.bash  run.bash  simulate_data.bash
dev/multirobot_slam_dev_container/workspace/gtsam_benchmark_project/data/benchmark_0/exp_0/: poses_initial_estimates.csv
dev/multirobot_slam_dev_container/workspace/gtsam_benchmark_project/data/benchmark_0/exp_1/: landmarks_initial_estimates.csv  params.yaml  poses_initial_estimates.csv
dev/multirobot_slam_dev_container/workspace/gtsam_benchmark_project/data/benchmark_0/exp_2/: landmarks_initial_estimates.csv  observations.csv  poses_initial_estimates.csv
dev/multirobot_slam_dev_container/workspace/gtsam_benchmark_project/data/benchmark_0/exp_3/: landmarks_initial_estimates.csv  params.yaml  poses_initial_estimates.csv
dev/multirobot_slam_dev_container/workspace/gtsam_benchmark_project/data/benchmark_0/exp_4/: landmarks_initial_estimates.csv  params.yaml  poses_initial_estimates.csv
dev/multirobot_slam_dev_container/workspace/gtsam_benchmark_project/data/benchmark_0/exp_5/: landmarks_initial_estimates.csv  odometries.csv  poses_initial_estimates.csv
dev/multirobot_slam_dev_container/workspace/gtsam_benchmark_project/data/benchmark_0/exp_6/: landmarks_initial_estimates.csv  params.yaml  poses_initial_estimates.csv
dev/multirobot_slam_dev_container/workspace/gtsam_benchmark_project/data/benchmark_0/exp_7/: landmarks_initial_estimates.csv  params.yaml  poses_initial_estimates.csv
dev/multirobot_slam_dev_container/workspace/gtsam_benchmark_project/data/benchmark_1/exp_10/: landmarks_initial_estimates.csv  observations.csv  odometries.csv  params.yaml  poses_initial_estimates.csv
dev/multirobot_slam_dev_container/workspace/gtsam_benchmark_project/data/benchmark_1/exp_11/: landmarks_initial_estimates.csv  observations.csv  odometries.csv  params.yaml  poses_initial_estimates.csv
dev/multirobot_slam_dev_container/workspace/gtsam_benchmark_project/data/benchmark_1/exp_12/: landmarks_initial_estimates.csv  observations.csv  odometries.csv  params.yaml  poses_initial_estimates.csv
dev/multirobot_slam_dev_container/workspace/gtsam_benchmark_project/data/ground_truth/: landmarks.csv
dev/multirobot_slam_dev_container/workspace/gtsam_benchmark_project/include/: arg_parser.h
dev/multirobot_slam_dev_container/workspace/gtsam_benchmark_project/res/batch/: benchmark_0.csv  benchmark_1.csv  benchmark_2.csv
dev/multirobot_slam_dev_container/workspace/gtsam_benchmark_project/scripts/: plot_graph.py  plot_isam_stats.py  simulate_data.py
dev/multirobot_slam_dev_container/workspace/gtsam_benchmark_project/src/: isam.cpp  isam_no_window.cpp  main.cpp
dev/multirobot_slam_dev_container/workspace/multirobot/ros2_ws/src/slam/: CMakeLists.txt
dev/multirobot_slam_dev_container/workspace/orbslam3_project/: CMakeLists.txt  build.bash  download_datasets.bash  run.bash
dev/multirobot_slam_dev_container/workspace/orbslam3_project/calibration/: params.npz  params.txt
dev/multirobot_slam_dev_container/workspace/orbslam3_project/params/Monocular/: camera.yaml
dev/multirobot_slam_dev_container/workspace/orbslam3_project/res/: frame_trajectory_0.txt  frame_trajectory_1.txt  frame_trajectory_10.txt  frame_trajectory_2.txt  frame_trajectory_3.txt  frame_trajectory_4.txt  frame_trajectory_5.txt  frame_trajectory_6.txt  frame_trajectory_7.txt  frame_trajectory_8.txt  frame_trajectory_9.txt
dev/multirobot_slam_dev_container/workspace/orbslam3_project/scripts/: camera_calibration.py  camera_capture.py  plot_trajectory.py
dev/multirobot_slam_dev_container/workspace/orbslam3_project/src/: camera_capture.cpp  mono_camera.cpp  mono_euroc.cpp
gtsam_examples/: CMakeLists.txt
gtsam_examples/res/slam_3d/: after.txt  before.txt
gtsam_examples/scripts/: slam_2d_plot.py  slam_3d_plot.py
gtsam_examples/src/: slam_2d.cpp  slam_3d.cpp
multirobot/multirobot_client_container/ros2_ws/src/sensor_processing/: CMakeLists.txt
multirobot/multirobot_client_container/ros2_ws/src/sensor_processing/config/: params.yaml
multirobot/multirobot_client_container/ros2_ws/src/sensor_processing/launch/: launch.py
multirobot/multirobot_client_container/ros2_ws/src/sensor_processing/src/: camera_calibration.cpp  rgbd_feature_extraction.cpp
multirobot/multirobot_server_container/ros2_ws/src/mocap4ros2_vicon_tf/: CMakeLists.txt  package.xml
multirobot/multirobot_server_container/ros2_ws/src/mocap4ros2_vicon_tf/config/: params.yaml
multirobot/multirobot_server_container/ros2_ws/src/mocap4ros2_vicon_tf/launch/: launch.py
multirobot/multirobot_server_container/ros2_ws/src/mocap4ros2_vicon_tf/rviz/: vicon_view.rviz
multirobot/multirobot_server_container/ros2_ws/src/mocap4ros2_vicon_tf/src/: tf_publisher.cpp
workspace/bt_project/: CMakeLists.txt
workspace/bt_project/bt_xml/: tree_demo_1.xml
workspace/bt_project/include/bt_demo_0/nodes/: check_battery.h  gripper_interface.h
workspace/bt_project/include/bt_demo_2/types/: pose.h
workspace/bt_project/src/bt_demo_0/nodes/: approach_object.cpp  gripper_interface.cpp
workspace/bt_project/src/bt_demo_1/: main.cpp
workspace/bt_project/src/bt_demo_2/: main.cpp
workspace/bt_project/src/bt_demo_2/nodes/: check_battery.cpp
workspace/ros2_ws_turtlebot3/src/bt_nav2/: CMakeLists.txt  package.xml
workspace/ros2_ws_turtlebot3/src/bt_nav2/launch/: launch.py
workspace/ros2_ws_turtlebot3/src/bt_nav2/src/initial_pose_publisher/: initial_pose_publisher.cpp
workspace/ros2_ws_turtlebot3/src/bt_nav2/src/navigation/: navigation.cpp  navigation_bt.cpp
workspace/ros2_ws_turtlebot3/src/bt_nav2/src/navigation_behavior/: navigation_behavior.cpp
workspace/ros2_ws_turtlebot3/src/bt_navigation/: CMakeLists.txt
workspace/ros2_ws_turtlebot3/src/bt_navigation/config/: locations.yaml
workspace/ros2_ws_turtlebot3/src/bt_navigation/launch/: launch.py
workspace/ros2_ws_turtlebot3/src/nav2_launch/: CMakeLists.txt
workspace/ros2_ws_turtlebot3/src/nav2_launch/launch/: launch.py
(+514 files in other folders)
